--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
         KF5::WindowSystem
 )
 
-file(GLOB TS_FILES translations/*.ts)
-qt5_create_translation(QM_FILES ${TS_FILES})
-add_custom_target(translations DEPENDS ${QM_FILES} SOURCES ${TS_FILES})
-add_dependencies(${PROJECT_NAME} translations)
+#file(GLOB TS_FILES translations/*.ts)
+#qt5_create_translation(QM_FILES ${TS_FILES})
+#add_custom_target(translations DEPENDS ${QM_FILES} SOURCES ${TS_FILES})
+#add_dependencies(${PROJECT_NAME} translations)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
-install(FILES ${QM_FILES} DESTINATION /usr/share/${PROJECT_NAME}/translations)
+#install(FILES ${QM_FILES} DESTINATION /usr/share/${PROJECT_NAME}/translations)
 install(FILES cutefish-dock-list.conf DESTINATION /etc)
